[package]
name = "aoc-profile-tree"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "api-handler"
path = "api/index.rs"

[lib]
name = "aoc_profile_tree"
path = "src/lib.rs"

[dependencies]
chrono = "0.4.42"
reqwest = { version = "0.13.1", features = ["blocking", "json"] }
scraper = "0.25.0"
thiserror = "2.0.17"
tokio = { version = "1.49.0", features = ["full"] }
vercel_runtime = "2.1.0"
