[package]
name = "aoc-profile-tree"
version = "0.1.0"
edition = "2024"

[lib]
name = "aoc_profile_tree"
path = "src/lib.rs"

[[bin]]
name = "index"
path = "api/index.rs"

[dependencies]
chrono = "0.4.42"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
scraper = "0.25.0"
thiserror = "2.0.17"
tokio = { version = "1.49.0", features = ["full"] }
vercel_runtime = "2.1.0"
