[package]
name = "aoc-profile-tree"
version = "0.1.0"
edition = "2024"

[lib]
name = "aoc_profile_tree"
path = "src/lib.rs"

[dependencies]
axum = "0.8.8"
chrono = "0.4.42"
reqwest = { version = "0.12", features = ["json"] }
scraper = "0.25.0"
shuttle-axum = "0.57.0"
shuttle-runtime = "0.57.0"
thiserror = "2.0.17"
tokio = { version = "1.49.0", features = ["full"] }
